ext/iconv/iconv.c
@@ -1217,7 +1217,7 @@ static php_iconv_err_t _php_iconv_mime_encode(smart_str *pretval, const char *fn
 				prev_in_left = ini_in_left = in_left;
 				ini_in_p = in_p;
 
-				for (out_size = char_cnt; out_size > 0;) {
+				for (out_size = (char_cnt - 2) / 3; out_size > 0;) {
 					size_t prev_out_left;
 
 					nbytes_required = 0;
